@@ -22,6 +22,7 @@ Conny Kühne
 Dan Davison <dandavison7@gmail.com>
 Dan Nicolaescu  <dann@ics.uci.edu>
 Dave Love http://www.loveshack.ukfsn.org/emacs/
+David Cagle <david_cagle@microvision.com>
 Don Bennett <dpb@donbennett.org>
 Drew Adams <drew.adams@oracle.com>
 Ed Loper
