@@ -4,6 +4,9 @@ Python Mode News
 New in version 6.1.1
 ---------------------
 
+- command from RET customizable via `py-return-key':
+  `py-newline-and-indent', `newline' or `py-newline-and-dedent'
+
 - boolean `py-use-font-lock-doc-face-p', default is nil 
   If non-nil, documention strings get `font-lock-doc-face'
 
